dinoco_docs/public/content/v0.0.1/en-us/orm/relations.mdx
export const title = "Relations";

# Relations

Relations connect models to each other in the Dinoco schema.

This page covers `@relation(...)`, `onDelete`, `onUpdate` and the most common relationship patterns.

---

## @relation(...)

The `@relation(...)` attribute defines how two models connect.

Supported parameters:

| Parameter    | Usage                                           |
| :----------- | :---------------------------------------------- |
| `name`       | Explicit name of the relation                   |
| `fields`     | Local fields used as key                        |
| `references` | Referenced fields in the target model           |
| `onDelete`   | Behavior when deleting the referenced record    |
| `onUpdate`   | Behavior when updating the referenced value     |

Full example:

```dinoco
model Post {
	id       Integer @id @default(autoincrement())
	title    String
	authorId Integer?
	author   User?   @relation(fields: [authorId], references: [id], onDelete: Cascade, onUpdate: SetNull)
}
```

## onDelete and onUpdate

Dinoco exposes referential actions to control what happens when the related record is altered or removed.

Supported values:

| Action       | Meaning                                         |
| :----------- | :---------------------------------------------- |
| `Cascade`    | Propagates the operation to dependent records   |
| `SetNull`    | Sets the foreign key to `null`                  |
| `SetDefault` | Sets the default value configured for the field |

Example:

```dinoco
model Comment {
	id      Integer @id @default(autoincrement())
	postId  Integer?
	post    Post?   @relation(fields: [postId], references: [id], onDelete: Cascade, onUpdate: SetNull)
}
```

Use `SetNull` only when the local field is optional.

## One to many

This is the most common relationship: a parent record has multiple children.

```dinoco
model User {
	id    Integer @id @default(autoincrement())
	name  String
	posts Post[]
}

model Post {
	id       Integer @id @default(autoincrement())
	title    String
	authorId Integer
	author   User    @relation(fields: [authorId], references: [id], onDelete: Cascade, onUpdate: Cascade)
}
```

Mental read:

- A `User` can have multiple `Post`s.
- Each `Post` belongs to a single `User`.

## Many to many

In many-to-many, both sides have lists.

```dinoco
model User {
	id    Integer @id @default(autoincrement())
	name  String

	roles Role[]
}

model Role {
	id    Integer @id @default(autoincrement())
	name  String

	users User[]
}
```

Mental read:

- A `User` can have multiple `Role`s.
- A `Role` can belong to multiple `User`s.

## Self relation

Self relation occurs when a model relates to itself.

```dinoco
model User {
	id        Integer @id @default(autoincrement())
	name      String
	managerId Integer?
	manager   User?   @relation(name: "UserManager", fields: [managerId], references: [id], onDelete: SetNull, onUpdate: Cascade)
	reports   User[]  @relation(name: "UserManager")
}
```

Mental read:

- A user can have a manager.
- A user can have multiple subordinates.

## Practical tips

- Use `name` when there is more than one relation between the same models.
- Use `onDelete: Cascade` when the child doesn't make sense without the parent.
- Use `onDelete: SetNull` when the relationship can be undone without removing the child record.
- Use self relations with explicit names to facilitate readability and codegen.

## Reference schema for examples

The examples below use the following schema:

```dinoco
config {
	database = "sqlite"
	database_url = env("DATABASE_URL")
}

enum Role {
	ADMIN
	USER
}

model User {
	id             String     @id @default(uuid())
	username       String     @unique
	role           Role       @default(USER)

	profile        Profile?

	followers      User[]     @relation(name: "UserFollows")
	following      User[]     @relation(name: "UserFollows")

	posts          Post[]     @relation(name: "PostAuthor")
	comments       Comment[]  @relation(name: "CommentAuthor")

	likedPosts     Post[]     @relation(name: "PostLikers")
	likedComments  Comment[]  @relation(name: "CommentLikers")
}

model Profile {
	id      String   @id @default(uuid())
	bio     String?
	userId  String   @unique
	user    User     @relation(fields: [userId], references: [id])
}

model Post {
	id        String     @id @default(uuid())
	title     String
	content   String

	authorId  String
	author    User       @relation(name: "PostAuthor", fields: [authorId], references: [id])

	likers    User[]     @relation(name: "PostLikers")

	comments  Comment[]

	tags      Tag[]
}

model Comment {
	id        String     @id @default(uuid())
	text      String

	parentId  String?
	parent    Comment?   @relation(name: "CommentReplies", fields: [parentId], references: [id])
	replies   Comment[]  @relation(name: "CommentReplies")

	postId    String
	post      Post       @relation(fields: [postId], references: [id])

	authorId  String
	author    User       @relation(name: "CommentAuthor", fields: [authorId], references: [id])

	likers    User[]     @relation(name: "CommentLikers")
}

model Tag {
	id     String  @id @default(uuid())
	name   String  @unique

	posts  Post[]
}
```

## Example of fetching with all possible relations starting from User

When you want to start from the `User` model and load all direct relations in a single read query, you can combine `select::&lt;T&gt;()` with multiple `includes(...)`.

```rust
use dinoco::{Extend, find_many};

#[derive(Debug, Clone, Extend)]
#[extend(Profile)]
struct ProfileView {
	id: String,
	bio: Option<String>,
}

#[derive(Debug, Clone, Extend)]
#[extend(User)]
struct UserRelationItem {
	id: String,
	username: String,
}

#[derive(Debug, Clone, Extend)]
#[extend(Tag)]
struct TagView {
	id: String,
	name: String,
}

#[derive(Debug, Clone, Extend)]
#[extend(Comment)]
struct CommentView {
	id: String,
	text: String,
	replies: Vec<CommentReplyView>,
	likers: Vec<UserRelationItem>,
}

#[derive(Debug, Clone, Extend)]
#[extend(Comment)]
struct CommentReplyView {
	id: String,
	text: String,
}

#[derive(Debug, Clone, Extend)]
#[extend(Post)]
struct PostView {
	id: String,
	title: String,
	content: String,
	likers: Vec<UserRelationItem>,
	tags: Vec<TagView>,
	comments: Vec<CommentView>,
}

#[derive(Debug, Clone, Extend)]
#[extend(User)]
struct UserWithAllRelations {
	id: String,
	username: String,
	profile: Option<ProfileView>,
	followers: Vec<UserRelationItem>,
	following: Vec<UserRelationItem>,
	posts: Vec<PostView>,
	comments: Vec<CommentView>,
	likedPosts: Vec<PostView>,
	likedComments: Vec<CommentView>,
}

let users = find_many::<User>()
	.select::<UserWithAllRelations>()
	.includes(|user| user.profile())
	.includes(|user| user.followers())
	.includes(|user| user.following())
	.includes(|user| {
		user.posts()
			.includes(|post| post.likers())
			.includes(|post| post.tags())
			.includes(|post| {
				post.comments()
					.includes(|comment| comment.replies())
					.includes(|comment| comment.likers())
			})
	})
	.includes(|user| {
		user.comments()
			.includes(|comment| comment.replies())
			.includes(|comment| comment.likers())
	})
	.includes(|user| {
		user.likedPosts()
			.includes(|post| post.likers())
			.includes(|post| post.tags())
			.includes(|post| {
				post.comments()
					.includes(|comment| comment.replies())
					.includes(|comment| comment.likers())
			})
	})
	.includes(|user| {
		user.likedComments()
			.includes(|comment| comment.replies())
			.includes(|comment| comment.likers())
	})
	.execute(&client)
	.await?;
```

This pattern is useful when you want to build a rich user view in a single relation-oriented read.

## Example of insert with relation using User and Profile

To insert a record with a 1:1 relation, use `with_relation(...)`.

```rust
use dinoco::insert_into;

let created_user = insert_into::<User>()
	.values(User {
		id: "user-1".to_string(),
		username: "bia".to_string(),
		role: Role::USER,
	})
	.with_relation(Profile {
		id: "profile-1".to_string(),
		bio: Some("Software Engineer".to_string()),
		userId: String::new(),
	})
	.execute(&client)
	.await?;
```

In this flow:

- The `User` is inserted first.
- The related `Profile` is created next.
- The `userId` key is linked by Dinoco's relation flow.

## Example of insert_many with with_relations(...)

Use `with_relations(...)` when you want to insert multiple parent records and, for each of them, also insert multiple new related records.

```rust
use dinoco::insert_many;

let posts = vec![
	Post {
		id: "post-1".to_string(),
		title: "First post".to_string(),
		content: "Content of the first post".to_string(),
		authorId: "user-1".to_string(),
	},
	Post {
		id: "post-2".to_string(),
		title: "Second post".to_string(),
		content: "Content of the second post".to_string(),
		authorId: "user-1".to_string(),
	},
];

let comments_per_post = vec![
	vec![
		Comment {
			id: "comment-1".to_string(),
			text: "Very good".to_string(),
			parentId: None,
			postId: String::new(),
			authorId: "user-2".to_string(),
		},
		Comment {
			id: "comment-2".to_string(),
			text: "I liked the example".to_string(),
			parentId: None,
			postId: String::new(),
			authorId: "user-3".to_string(),
		},
	],
	vec![
		Comment {
			id: "comment-3".to_string(),
			text: "I want more details".to_string(),
			parentId: None,
			postId: String::new(),
			authorId: "user-2".to_string(),
		},
	],
];

insert_many::<Post>()
	.values(posts)
	.with_relations(comments_per_post)
	.execute(&client)
	.await?;
```

In this flow:

- Each `Post` is inserted.
- Each group in `comments_per_post` corresponds to the `Post` at the same position.
- Dinoco links the `Comment`s to the correct post during writing.

## Example of insert_many with with_connections(...)

Use `with_connections(...)` when you want to insert multiple parent records and connect each of them to multiple existing records.

```rust
use dinoco::insert_many;

insert_many::<Post>()
	.values(vec![
		Post {
			id: "post-10".to_string(),
			title: "Rust and Dinoco".to_string(),
			content: "Post about productivity".to_string(),
			authorId: "user-1".to_string(),
		},
		Post {
			id: "post-11".to_string(),
			title: "Advanced relations".to_string(),
			content: "Post about includes and relations".to_string(),
			authorId: "user-1".to_string(),
		},
	])
	.with_connections(vec![
		vec![
			Tag { id: "tag-1".to_string(), name: "rust".to_string() },
			Tag { id: "tag-2".to_string(), name: "orm".to_string() },
		],
		vec![
			Tag { id: "tag-2".to_string(), name: "orm".to_string() },
			Tag { id: "tag-3".to_string(), name: "sqlite".to_string() },
		],
	])
	.execute(&client)
	.await?;
```

In this flow:

- The `Post`s are inserted.
- The existing `Tag`s are connected to the corresponding posts.
- Each group of the outer vector represents the connections of the post at the same position.

## Next steps

- [**Enums**](/v0.0.1/orm/enums): see how to represent controlled values in the schema.
- [**Models**](/v0.0.1/orm/models): see field structure and examples of fetching, inserting, updating, and deleting with the Dinoco API.
